--- a/src/main/webapp/pages/registerComplete.xhtml
+++ b/src/main/webapp/pages/registerComplete.xhtml
@@ -30,7 +30,7 @@
 						<br />
 						<br />
 						<p:commandLink value="CLB" ajax="true" udpate="@form :bannerForm"
-							action="#{redirectBean.redirectTo('clb.xhtml?faces-redirect=true')}"></p:commandLink>
+							action="#{redirectBean.redirectTo('analysis.xhtml?faces-redirect=true')}"></p:commandLink>
 					</p:panel>
 					<p:panel styleClass="signUpPanel" rendered="#{not empty clbHomeRegisterBean.registerResult}">
 						<p:panelGrid columns="2" styleClass="successGrid">
