Finishing Schedule Task for Analyzer Registry

--- a/src/main/webapp/pages/analysis.xhtml
+++ b/src/main/webapp/pages/analysis.xhtml
@@ -9,7 +9,7 @@
 	xmlns:pe="http://primefaces.org/ui/extensions"
 	template="template/ui.xhtml">
 	<ui:define name="body">
-		<ui:include src="./general/menutab.xhtml" />
+		<ui:include src="./general/headerLoggedIn.xhtml" />
 		<div class="analysisDiv">
 			<h:form id="analysisForm">
 				<div>
