--- a/src/main/webapp/pages/index.xhtml
+++ b/src/main/webapp/pages/index.xhtml
@@ -7,102 +7,75 @@
 	<ui:define name="body">
 
 		<div class="homeMainDivClass">
-			<h:form id="bannerForm" class="headerForm header p-grid">
-					<div class="p-col logo p-justify-center">
-						<p:graphicImage url="/resources/images/logoL8energy.png" height="50px" width="150px"></p:graphicImage>
-					</div>
-					<div class="p-col loginForm">
-						<div class="p-col username">
-							<table>
-								<tr>
-									<td>
-										<p:outputLabel for="username" class="userLabel">Username:</p:outputLabel>
-									</td>
-									<td>
-										<p:inputText id="username" label="username" value="#{clbHomeLoginBean.loginUsername}" />
-									</td>
-								</tr>
-							</table>
-						</div>
-						<div class="p-col password">
-							<table>
-								<tr>
-									<td>
-										<p:outputLabel for="passwordUser" class="passLabel">Password:</p:outputLabel>
-									</td>
-									<td>
-										<p:inputText label="passwordUser" id="passwordUser" value="#{clbHomeLoginBean.loginPassword}" type="password" />
-									</td>
-								</tr>
-							</table>
-						</div>
-						<div class="p-col loginButton">
-							<p:commandButton styleClass="loginFormButton" value="Log In" action="#{clbHomeLoginBean.loginUser}" ajax="true"
-								update="@form" oncomplete="if (args.cantLoginUserNotFound === true )
-										{ 
-											PF('unSuccessPaneldoesnexistUnsuccess').show();
-										}
-										if (args.cantLoginPasswordDoesntMatch === true)
-										{
-											PF('unSuccessPanelpasswordnotmatchUnsuccess').show();
-										}
-										"></p:commandButton>
-						</div>
-					</div>
-			</h:form>
-
+			<ui:include src="./general/headerIndex.xhtml" />
 			<table class="regFormTableClass" width="100%">
 				<tr>
 					<td width="50%">
-						<div class="p-grid p-col-align-center p-justify-around vertical-container">
-							<h:form id="registerForm" class="registerForm"> 
+						<div
+							class="p-grid p-col-align-center p-justify-around vertical-container">
+							<h:form id="registerForm" class="registerForm">
 								<p:panel header="Register Form" style="width:400px !important">
-										<div class="p-col">
-											<p:outputLabel>Name</p:outputLabel>
-											<p:inputText validatorMessage="Name too short!" requiredMessage="Name is required!" id="nameUser"
-												value="#{clbHomeRegisterBean.user.name}" required="true" label="nameUser">
-												<f:validateLength minimum="3"></f:validateLength>
-											</p:inputText>
-											<p:message for="nameUser" />
-											</div>
-			
-											<div class="p-col">
-													<p:outputLabel>Email</p:outputLabel>
-													<p:inputText requiredMessage="Email is required!" validatorMessage="Email is not valid!"
-														value="#{clbHomeRegisterBean.user.username}" required="true" label="emailUser" id="emailUser">
-														<f:validateRegex pattern="[\w\.-]*[a-zA-Z0-9_]@[\w\.-]*[a-zA-Z0-9]\.[a-zA-Z][a-zA-Z\.]*[a-zA-Z]" />
-													</p:inputText>
-													<p:message for="emailUser" />
-											</div>
-			
-											<div class="p-col">
-													<p:outputLabel>Password</p:outputLabel>
-													<p:inputText requiredMessage="Password is required!" value="#{clbHomeRegisterBean.user.password}"
-														label="passwordUser" id="passwordUser" required="true" type="password"
-														validatorMessage="Al least 6 characters are needed!">
-														<f:validateLength minimum="6"></f:validateLength>
-													</p:inputText>
-													<p:message for="passwordUser" />
-											</div>
-											
-											<div class="p-col">
-													<p:outputLabel>Address</p:outputLabel>
-													<p:inputTextarea rows="5" value="#{clbHomeRegisterBean.user.address}" class="textAreaRegForm"></p:inputTextarea>
-											</div>
-										<p:spacer height="50"/>
-										<div class="p-col">
-												<p:commandLink styleClass="regFormLink" oncomplete="PF('resendEmail').show()" value="Resend Registration Email"/>
-										</div>
-			
 									<div class="p-col">
-											<p:commandLink styleClass="regFormLink" oncomplete="PF('recoverPassword').show()" value="Forget your password?" />
+										<p:outputLabel>Name</p:outputLabel>
+										<p:inputText validatorMessage="Name too short!"
+											requiredMessage="Name is required!" id="nameUser"
+											value="#{clbHomeRegisterBean.user.name}" required="true"
+											label="nameUser">
+											<f:validateLength minimum="3"></f:validateLength>
+										</p:inputText>
+										<p:message for="nameUser" />
 									</div>
-									<p:spacer height="10"/>
+
 									<div class="p-col">
-											<div class="p-col">
-													<p:commandButton styleClass="regFormButton" action="#{clbHomeRegisterBean.registerUserAccount}" validateClient="true"
-													value="Sign Up" ajax="true" onstart="document.body.style.cursor='wait'"
-												 oncomplete="
+										<p:outputLabel>Email</p:outputLabel>
+										<p:inputText requiredMessage="Email is required!"
+											validatorMessage="Email is not valid!"
+											value="#{clbHomeRegisterBean.user.username}" required="true"
+											label="emailUser" id="emailUser">
+											<f:validateRegex
+												pattern="[\w\.-]*[a-zA-Z0-9_]@[\w\.-]*[a-zA-Z0-9]\.[a-zA-Z][a-zA-Z\.]*[a-zA-Z]" />
+										</p:inputText>
+										<p:message for="emailUser" />
+									</div>
+
+									<div class="p-col">
+										<p:outputLabel>Password</p:outputLabel>
+										<p:inputText requiredMessage="Password is required!"
+											value="#{clbHomeRegisterBean.user.password}"
+											label="passwordUser" id="passwordUser" required="true"
+											type="password"
+											validatorMessage="Al least 6 characters are needed!">
+											<f:validateLength minimum="6"></f:validateLength>
+										</p:inputText>
+										<p:message for="passwordUser" />
+									</div>
+
+									<div class="p-col">
+										<p:outputLabel>Address</p:outputLabel>
+										<p:inputTextarea rows="5"
+											value="#{clbHomeRegisterBean.user.address}"
+											class="textAreaRegForm"></p:inputTextarea>
+									</div>
+									<p:spacer height="50" />
+									<div class="p-col">
+										<p:commandLink styleClass="regFormLink"
+											oncomplete="PF('resendEmail').show()"
+											value="Resend Registration Email" />
+									</div>
+
+									<div class="p-col">
+										<p:commandLink styleClass="regFormLink"
+											oncomplete="PF('recoverPassword').show()"
+											value="Forget your password?" />
+									</div>
+									<p:spacer height="10" />
+									<div class="p-col">
+										<div class="p-col">
+											<p:commandButton styleClass="regFormButton"
+												action="#{clbHomeRegisterBean.registerUserAccount}"
+												validateClient="true" value="Sign Up" ajax="true"
+												onstart="document.body.style.cursor='wait'"
+												oncomplete="
 															 document.body.style.cursor='default';
 															 if (!args.validationFailed){
 																 document.body.style.cursor = 'default'; 
@@ -113,9 +86,10 @@
 																	 PF('unSuccessPanelunexpectedUnsuccess').show();
 																 }
 																 else PF('successPanelregistry').show(); 
-															 }" update="registerForm"/>
-											</div>
-										
+															 }"
+												update="registerForm" />
+										</div>
+
 									</div>
 								</p:panel>
 							</h:form>
@@ -123,25 +97,20 @@
 					</td>
 					<td valign="middle">
 						<div class="p-grid p-col-align-left">
-							<div class="mainTextTitleDiv">
-								CLB Team Project Starts Now!
+							<div class="mainTextTitleDiv">CLB Team Project Starts Now!
 							</div>
 							<div class="mainTextContentDiv">
-								The development of the lastest Energy Data analyzer product! 
-								<br/>
-								Check out how your Energy System could be optimized and less costly
-								<br/>
-								Your energy data will be safe and stored
-								<br/>
-								Build your own energy system easily with this application
-								<br/>
+								The development of the lastest Energy Data analyzer product! <br />
+								Check out how your Energy System could be optimized and less
+								costly <br /> Your energy data will be safe and stored <br />
+								Build your own energy system easily with this application <br />
 								Advanced Analysis for expert users!
 							</div>
 						</div>
 					</td>
 				</tr>
 			</table>
-			
+
 		</div>
 		<ui:include src="./popups/recoverPassword.xhtml" />
 		<ui:include src="./popups/resendEmail.xhtml" />
