--- a/src/main/webapp/pages/buildingManagement.xhtml
+++ b/src/main/webapp/pages/buildingManagement.xhtml
@@ -8,7 +8,7 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	template="template/ui.xhtml">
 	<ui:define name="body">
-		<ui:include src="./general/menutab.xhtml" />
+		<ui:include src="./general/headerLoggedIn.xhtml" />
 		<div class="buildingManagementDiv">
 			<div align="center" class="titleDivClass">
 				<p:outputLabel value="Building Management"></p:outputLabel>
