--- a/src/main/webapp/pages/general/footer.xhtml
+++ b/src/main/webapp/pages/general/footer.xhtml
@@ -8,15 +8,14 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	template="../template/ui.xhtml">
 	<ui:define name="body">
-		<div  class="p-grid footer">
-			<div class="p-col-12 p-justify-center">
+		<div class="p-grid footer">
+			<div class="p-col-12">
 					<b><p:outputLabel value="© Copyright 2018 CLBProject" /></b>
 			</div>
 
 			<div class="p-col">
 					<p:outputLabel value="All rights reserved"></p:outputLabel>
 			</div>
-			
 			
 		</div>
 	</ui:define>
