--- a/src/main/webapp/pages/popups/successDialog.xhtml
+++ b/src/main/webapp/pages/popups/successDialog.xhtml
@@ -9,8 +9,8 @@
 	template="../template/ui.xhtml">
 	<ui:define name="body">
 		<p:dialog widgetVar="successPanel#{id}" id="successPanel#{id}" modal="true"
-			position="center center" draggable="false" closable="false" header="Done"
-			closeOnEscape="true" styleClass="registerDialog" resizable="false">
+			draggable="false" closable="false" header="Done"
+			closeOnEscape="true" resizable="false">
 			<h:form>
 				<div class="successDialogDiv">
 					<p:panelGrid columns="2" styleClass="successGrid">
