--- a/src/main/webapp/pages/popups/newDivisionPopup.xhtml
+++ b/src/main/webapp/pages/popups/newDivisionPopup.xhtml
@@ -30,7 +30,7 @@
 					</p:panelGrid>
 					<br/>
 					<div align="center">
-						<p:commandButton action="#{buildingManagementBean.createDivision}" ajax="true" update=":buildingManagementForm" 
+						<p:commandButton action="#{analysisBean.createDivision}" ajax="true" update=":buildingManagementForm" 
 									styleClass="signButton" value="Create"
 									onstart="document.body.style.cursor='wait'"
 									oncomplete="document.body.style.cursor='default'; 
