--- a/src/main/webapp/pages/analysis.xhtml
+++ b/src/main/webapp/pages/analysis.xhtml
@@ -35,7 +35,10 @@
 															update="analysisForm"></p:ajax>
 											    </p:treeTable>
 											    <p:graphicImage width="12px" value="#{request.contextPath}/../resources/images/plus.png" style="padding-right:5px"/>
-											    <p:commandLink styleClass="buildingLinks" value="Add Division"></p:commandLink>
+											    <p:commandLink styleClass="buildingLinks" value="Add Division"
+											     		    oncomplete="PF('newDivisionPopup').show()"
+															action="#{analysis.setNewDivisionBuilding(building.buildingid)}"
+															ajax="true" update=":newDivisionFormId"></p:commandLink>
 											    <p:spacer width="15"></p:spacer>
 											    <p:graphicImage width="12px" value="#{request.contextPath}/../resources/images/negative.png" style="padding-right:5px"/>
 											    <p:commandLink styleClass="buildingLinks" value="Delete Building" ajax="true" update=":analysisForm"
@@ -60,5 +63,8 @@
 			</div>
 			<ui:include src="./general/footer.xhtml" />
 			<ui:include src="./popups/newBuildingPopup.xhtml" />
+			<ui:include src="./popups/newDivisionPopup.xhtml">
+				<ui:param name="parentDivision" value="parentName" />
+			</ui:include>
 	</ui:define>
 </ui:composition>
